# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: code_and_project_quality.yml  rust_code.yml  test_corerage_report.yml
configuration/: local.yaml  production.yaml  share.yaml
migrations/: 20230723150315_create_subscriptions_table.sql  20230729145051_make_status_not_null_in_subscriptions.sql  20230729152639_create_subscription_tokens_table.sql  20230731083218_create_users_table.sql  20230803150002_add_seed_user_to_users_table.sql  20230806054039_create_idempotency_table.sql  20230806092228_make_idempotency_response_data_can_null.sql  20230811054048_create_newsletters_issues_table.sql  20230811054504_create_newsletters_issues_delivery_queue_table.sql  20230813101136_add_status_column_to_newslettters_issues_table.sql  20230813103723_update_null_status_in_newsletters_issues.sql  20230815085810_add_n_tasks_column_to_newsletters_issues_table.sql  20230815091742_change_n_tasks_to_finished_n_tasks_and_add_required_n_tasks_to_newsletters_issue_table.sql  20230815103132_update_status_and_make_n_tasks_not_null_in_newsletters_issue_table.sql
scripts/: init_db.sh  init_mailcrab.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  helper.rs  lib.rs  main.rs  newsletters_issues.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: check_health.rs  helper.rs  mod.rs  newsletter.rs  newsletters.rs  subscribe.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/change_password/: get.rs  post.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/change_password/: get.rs  post.rs
src/routes/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
src/routes/subscriptions/: confirm.rs  mod.rs  subscribe.rs
tests/: dummy.rs  health_check.rs
tests/api/: health.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs
tests/api/admin/: change_password.rs  dashboard.rs  mod.rs  newsletters.rs
