[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rust project can content multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { verion = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
validator = "0.16"
unicode-segmentation = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", # Use actix runtime, and rustls as TLS backend
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.6"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"
tokio = { version = "1", features = ["rt"] }
serde_json = "1"
linkify = "0.10"