[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rust project can content multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"
required-features = ["pool"]

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { verion = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
validator = "0.16"
unicode-segmentation = "1"
# reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
argon2 = { version = "0.5", features = ["std"] }
# urlencoding = "2"
htmlescape = "0.3"
# hmac = { version = "0.12", features = ["std"] }
# sha2 = "0.10"
# hex = "0.4"
strum = { version = "0.25", features = ["derive"] }
lettre = { version = "0.10", default-features = false, features = ["builder", "tokio1", "smtp-transport", "tokio1-native-tls"] }

[features]
# Make lettre pool feature optional
# When send message with lettre smtp transport pool
# lettre open and lock connection until app use this pool match PoolConfig condition
# and maybe letter uses the SAME LOCAL PORT every time open a connection
# - PoolConfig set default connection timeout to 60 secs and max connections to 10
#   - So connection will be locked until timeout 
#   - Or match the max number of connections
# * By default tests in tests directory are run in sequence (once at a time)
# * But maybe smtp connection pool is still opened and locked a port by a test
# * -> Lead next test need to wait until stmp pool connection is released
# Set required features when build project in [[bin]]
pool = ["lettre/pool"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", # Use actix runtime, and rustls as TLS backend
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.6"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies"] }
wiremock = "0.5"
tokio = { version = "1", features = ["rt"] }
linkify = "0.10"
futures = "0.3"
serde_urlencoded = "0.7"